--- a/ApiCatalogo/appsettings.json
+++ b/ApiCatalogo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=catalogodb;Username=postgres;Password=root;Include Error Detail=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
